<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SightseeingProfile"
    android:layout_marginEnd="0dp" >


    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/checkbox_background"
            android:button="@null"
            android:checked="true"
            android:text="@string/info"
            android:textAlignment="center"
            android:textAllCaps="true"


            />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/checkbox_background"
            android:button="@null"
            android:text="@string/opening_hours"
            android:textAlignment="center"
            android:textAllCaps="true" />

        <RadioButton
            android:id="@+id/radio3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/checkbox_background"
            android:button="@null"
            android:text="@string/reviews"
            android:textAlignment="center"
            android:textAllCaps="true" />
    </RadioGroup>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="380dp"
        android:layout_height="172dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_group"
        app:layout_constraintVertical_bias="0.147" />

    <TextView
        android:id="@+id/text_view"
        android:layout_width="363dp"
        android:layout_height="125dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/textview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.863"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/likeIcon"
        android:layout_width="141dp"
        android:layout_height="97dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="214dp"
        android:layout_marginBottom="165dp"
        android:background="@drawable/like_icon"
        android:button="@null"
        android:checked="false"
        android:clickable="true"
        android:focusable="true"
        android:stateListAnimator="@animator/scale"
        app:layout_constraintBottom_toTopOf="@+id/text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView1" />

</android.support.constraint.ConstraintLayout>